feat(todo): expose schema-driven runtime forms